fix: album images size & gap

--- a/style.css
+++ b/style.css
@@ -425,12 +425,12 @@ main {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: 32px;
 }
 
 .album-photos img {
-    width: 280px;
-    height: 190px;
+    width: 300px;
+    height: 210px;
 }
 
 footer {
